# zellij-copy-mode

./: .gitignore  Cargo.toml  README.md  dev-reload.sh  plugin.kdl
.github/workflows/: ci.yml  release.yml
src/: main.rs
